k8s/phoenix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-service  # 给服务起个正式的名字
spec:
  type: NodePort         # 🔥 关键：改为 NodePort 类型
  selector:
    app: phoenix         # 只要标签是 app: phoenix 的 Pod，都是我的人
  ports:
    - protocol: TCP
      port: 80           # Service 也就是这个“虚拟总机”对外显示的端口
      targetPort: 5000   # 转发给 Pod 里的 5000 端口
      nodePort: 30007    # 🚪 指定墙上的洞：30000-32767 之间。为了好记，我们选 30007
